crates/rig-derive/tests/ui/tool_context/fail_immutable_context.stderr
error: a `ToolContext` parameter must have type `&mut ToolContext`
 --> tests/ui/tool_context/fail_immutable_context.rs:7:31
  |
7 | fn immutable_context(context: &ToolContext) -> Result<(), rig_core::tool::ToolExecutionError> {
  |                               ^^^^^^^^^^^^
